--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 celery==5.0.5
 Django==3.2.4
 redis==3.5.3
-
 pytest==6.2.4
 pytest-django==4.4.0
+psycopg2==2.8.6
+djoser==2.1.0
+djangorestframework==3.12.4
+django-google-maps==0.12.4
+drf-yasg==1.20.0
