--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
-version: "3.9"
+version: "3.8"
 
 services:
   django:
     build: .
     container_name: django
-    command: bash -c "python manage.py migrate --noinput &&
-             python manage.py runserver 0.0.0.0:8000"
+    env_file:
+      - .env.django
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/usr/src/project/
     ports:
       - "8000:8000"
-    environment:
-      - DEBUG=1
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
-      - CELERY_BROKER=redis://redis:6379/0
-      - CELERY_BACKEND=redis://redis:6379/0
     depends_on:
       - pgdb
       - redis
@@ -29,10 +25,8 @@ services:
   pgdb:
     image: postgres
     container_name: pgdb
-    environment:
-      - POSTGRES_DB=project
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - .env.db
     volumes:
        - pgdata:/var/lib/postgresql/data/
   redis:
