--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,10 @@
 SECRET_KEY=django-insecure-kix^a=tp3i8e=!zb-^bkasvf$7jj#v%3f14+1*)v7^f(j^9m+m
+DEBUG=1
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
+CELERY_BROKER=redis://redis:6379/0
+CELERY_BACKEND=redis://redis:6379/0
 GOOGLE_MAPS_API_KEY=AIzaSyAD8jJD-ZPyLii3lTUt5yADsZVSTLLjJtc
-EMAIL_USE_TLS=True
+EMAIL_USE_TLS=1
 EMAIL_HOST=stmp.gmail.com
 EMAIL_HOST_USER=rtluats
 EMAIL_HOST_PASSWORD=Aleks328828
